ex-2.08-v1.2/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: hovhanneshovakimyan/k8sproject:ex-2.08-v1.2-backend
          ports:
            - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: hovhanneshovakimyan/k8sproject:ex-2.08-v1.2-frontend
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: todo-frontend-cache-pvc
