ex-2.08-v1.2/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: devops
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: todo-backend
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
  namespace: devops
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: todo-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: devops
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: postgres
  clusterIP: None
