ex-2.08-v1.2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: devops
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 3000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 3001
